--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 							<li><a href="elements.html">Fun Facts</a></li> -->
 						</ul>
 						<ul class="icons">
+							<li><a href="https://medium.com/@almogklein.16" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 							<li><a href="https://www.linkedin.com/in/almog-klein/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/almogklein" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
@@ -71,7 +72,9 @@
 								<article>
 									<header>
 										<span class="date">2023</span>
-										<h2><a href="https://github.com/almogklein/RASA_BOT_">Rasa Bootstrap Chatbot</a></h2>
+										<h2><a href="https://github.com/almogklein/RASA_BOT_">Rasa Bootstrap Chatbot: 
+											ChatGPT + Google Sheets
+										</a></h2>
 									</header>
 								<a href="https://github.com/almogklein/RASA_BOT_" class="image fit"><img src="images\rasa_bot.jpg" alt="" /></a>
 								<p>A bootstrapped chatbot built using the open-source conversational AI platform, Rasa. This chatbot has access to both Google Sheets and the OpenAI ChatGPT API, making it a powerful tool for generating answers to a wide range of questions.</p>
@@ -133,15 +136,16 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(+972) 54-7456755</a></p>
+								<p><a href="tel:+972547456755">(+972) 54-7456755</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">almogklein.16@gmail.com</a></p>
+								<p><a href="mailto:almogklein.16@gmail.com">almogklein.16@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
+									<li><a href="https://medium.com/@almogklein.16" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 									<li><a href="https://www.linkedin.com/in/almog-klein/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/almogklein" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
