--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<h2><a href="https://github.com/almogklein/Computer_vision_course_-_classical_algorithms_to_neural_networks">Course: Classical Image Processing</a></h2>
 									</header>
 									<a href="https://github.com/almogklein/Computer_vision_course_-_classical_algorithms_to_neural_networks" class="image fit"><img src="images/Image_Processing.jpg" alt="" /></a>
-									<p>This is a 10-lesson course taught by PhD Chen Sagiv from SagivTech, which focuses on classical computer vision methods with an emphasis on before the Deep era.
+									<p>This course taught by PhD Chen Sagiv from SagivTech, which focuses on classical computer vision methods with an emphasis on before the Deep era.
 										This course is designed for students who are interested in learning about image processing techniques that have been used for several decades in the field of computer vision.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/almogklein/Computer_vision_course_-_classical_algorithms_to_neural_networks" class="button">GitHub Repository</a></li>
