--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Almog Klein - Portfolio<br /></h1>
 						<h2>Data scientist | Electronics Engineer | Galactic Problem-Solver</h2>
-						<p><br />M.Sc. degree in Intelligent Systems Engineering (B.Sc. EEE) with experience researching, developing, testing, and evaluating data solutions, including applying Data Science methodology and working with AI/ML/DL methods. 
+						<p><br />M.Sc. degree in Intelligent Systems Engineering (B.Sc. EEE) with experience in research, development, tests, and evaluate data solutions, including applying Data Science methodology and working with AI/ML/DL methods. 
 							Proficient in statistics, algorithms, and deep learning models, utilizing a wide range of technological infrastructures. 
 							Experienced in using Jupyter, Git, Python (Pandas, NumPy, SciPy, Scikit-Learn, Keras, TensorFlow, PyTorch), Spark, and MATLAB to create robust data models. 
 							Strong teamwork, critical thinking skills, with the ability to communicate scientific data effectively.</p>
