--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">2023</span>
+										<!-- <span class="date">2023</span> -->
 										<h2><a href="https://github.com/almogklein/RASA_BOT_">Rasa Bootstrap Chatbot: 
 											ChatGPT + Google Sheets
 										</a></h2>
@@ -90,7 +90,7 @@
 
 								<article>
 									<header>
-										<span class="date">2023</span>
+										<!-- <span class="date">2023</span> -->
 										<h2><a href="https://github.com/almogklein/Computer_vision_course_-_classical_algorithms_to_neural_networks">Course: Classical Image Processing</a></h2>
 									</header>
 									<a href="https://github.com/almogklein/Computer_vision_course_-_classical_algorithms_to_neural_networks" class="image fit"><img src="images/Image_Processing.jpg" alt="" /></a>
@@ -103,7 +103,7 @@
 
 								<article>
 									<header>
-										<span class="date">2022</span>
+										<!-- <span class="date">2022</span> -->
 										<h2><a href="https://github.com/almogklein/THR_Audio_Classification">Medical decision support system: Total hip replacement using acoustic profiles</a></h2>
 									</header>
 									<br /><a href="https://github.com/almogklein/THR_Audio_Classification" class="image fit"><img src="images/thr.jpg" alt="" /></a>
@@ -115,7 +115,7 @@
 
 								<article>
 									<header>
-										<span class="date">2022</span>
+										<!-- <span class="date">2022</span> -->
 										<h2><a href="https://github.com/almogklein/Odor_Classification">Analysis, labeling, reduction of dimension, visualization and clustering of smells according to different smell groups</a></h2>
 									</header>
 									<a href="https://github.com/almogklein/Odor_Classification" class="image fit"><img src="images/pca.jpg" alt="" /></a>
@@ -127,7 +127,7 @@
 
 								<article>
 									<header>
-										<span class="date">2022</span>
+										<!-- <span class="date">2022</span> -->
 										<h2><a href="https://github.com/almogklein/KaggleSurvey_2022_-_Data_analysis">KaggleBusters 2022 Kaggle Machine DS & ML Survey Analysis</a></h2>
 									</header>
 									<a href="https://github.com/almogklein/KaggleSurvey_2022_-_Data_analysis" class="image fit"><img src="images/ks.JPG" alt="" /></a>
