--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
-							<!-- <li><a href="generic.html">Exp</a></li>
-							<li><a href="elements.html">Fun Facts</a></li> -->
+							<li><a href="posts.html">Posts</a></li>
+							<!-- <li><a href="elements.html">Fun Facts</a></li> -->
 						</ul>
 
 						<ul class="icons">
@@ -190,7 +190,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; almog-klein</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
