--- a/about.html
+++ b/about.html
@@ -50,6 +50,10 @@
 						<li><a href="index.html" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 					</ul>
 				</div>
+				<!-- Copyright -->
+				<div id="copyright">
+					<ul><li>&copy; almog-klein</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+				</div>
 			</div>
 
 		<!-- Scripts -->
