--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
 
 				<!-- Intro -->
 				<div id="intro">
-					<h1>Almog Klein<br />
-					Data scientist</h1>
+					<h1>Almog Klein - Portfolio<br /></h1>
+						<h2>Data scientist | Electronics Engineer | Galactic Problem-Solver</h2>
 					<p>Hello,
 
 						My name is Almog Klein. I recently graduated with a master's degree in Intelligent Systems Engineering. My expertise includes machine learning models, statistics, algorithms, and Python programming. 
