--- a/posts.html
+++ b/posts.html
@@ -17,10 +17,19 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
+				<!-- Intro -->
+				<div id="intro">
+					<h1>Almog Klein - Portfolio<br /></h1>
+					<p><strong><big>Data scientist | Electronics Engineer | Galactic Problem-Solver</big></strong></p>
+						<br /><ul class="actions">
+							<br /><li><a href="about2.html" class="logo">About</a></li>
+					</ul>
+				</div>
+
 				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Back to Main page</a>
-					</header>
+				<header id="header">
+					<a href="about2.html" class="logo">About</a>
+				</header>
 
 				<!-- Nav -->
 					<nav id="nav">
