--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Almog Klein - Portfolio<br /></h1>
-						<h2>Data scientist | Electronics Engineer | Galactic Problem-Solver</h2>
+						<p><strong><big>Data scientist | Electronics Engineer | Galactic Problem-Solver</big></strong></p>
 						<p><br />M.Sc. degree in Intelligent Systems Engineering (B.Sc. EEE) with experience in research, development, tests, and evaluate data solutions, including applying Data Science methodology and working with AI/ML/DL methods. 
 							Proficient in statistics, algorithms, and deep learning models, utilizing a wide range of technological infrastructures. 
 							Experienced in using Jupyter, Git, Python (Pandas, NumPy, SciPy, Scikit-Learn, Keras, TensorFlow, PyTorch), Spark, and MATLAB to create robust data models. 
 							Strong teamwork, critical thinking skills, with the ability to communicate scientific data effectively.</p>
-						<ul class="actions">
-							<li><a href="about.html" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+						
+							<br /><ul class="actions">
+								<br /><li><a href="about1.html" class="logo">About</a></li>
 						</ul>
 					</div>
 
 				<!-- Header -->
 					<header id="header">
-						<a href="about.html" class="logo">About</a>
+						<a href="about1.html" class="logo">About</a>
 					</header>
 
 				<!-- Nav -->
