--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Almog Klein - Data Scientist Portfolio</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -26,22 +26,22 @@
 							Experienced in using Jupyter, Git, Python (Pandas, NumPy, SciPy, Scikit-Learn, Keras, TensorFlow, PyTorch), Spark, and MATLAB to create robust data models. 
 							Strong teamwork, critical thinking skills, with the ability to communicate scientific data effectively.</p>
 						
-							<br /><ul class="actions">
+							<!-- <br /><ul class="actions">
 								<br /><li><a href="about1.html" class="logo">About</a></li>
-						</ul>
+							</ul> -->
 					</div>
 
 				<!-- Header -->
-					<header id="header">
+					<!-- <header id="header">
 						<a href="about1.html" class="logo">About</a>
-					</header>
+					</header> -->
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
 							<li><a href="posts.html">Posts</a></li>
-							<!-- <li><a href="elements.html">Fun Facts</a></li> -->
+							<li><a href="about1.html">About</a></li>
 						</ul>
 
 						<ul class="icons">
@@ -140,22 +140,6 @@
 
 								
 							</section>
-
-						<!-- Footer -->
-							<!-- <footer>
-								<div class="pagination">
-									<a href="#" class="previous">Prev</a>
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer> -->
-
 					</div>
 
 				<!-- Footer -->
