--- a/posts.html
+++ b/posts.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Almog Klein - Data Scientist Portfolio - Posts</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -21,22 +21,20 @@
 				<div id="intro">
 					<h1>Almog Klein - Portfolio<br /></h1>
 					<p><strong><big>Data scientist | Electronics Engineer | Galactic Problem-Solver</big></strong></p>
-						<br /><ul class="actions">
-							<br /><li><a href="about2.html" class="logo">About</a></li>
-					</ul>
+						
 				</div>
 
 				<!-- Header -->
-				<header id="header">
+				<!-- <header id="header">
 					<a href="about2.html" class="logo">About</a>
-				</header>
+				</header> -->
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Projects</a></li>
 							<li class="active"><a href="posts.html">Posts</a></li>
-							<!-- <li><a href="elements.html">Fun Facts</a></li> -->
+							<li><a href="about1.html">About</a></li>
 						</ul>
 
 						<ul class="icons">
@@ -57,6 +55,22 @@
 
 						<!-- Posts -->
 						<section class="posts">
+
+							<article>
+								<header>
+									<!-- <span class="date">2023</span> -->
+									<h2><a href="https://medium.com/@almogklein.16/building-your-portfolio-website-with-github-pages-f67b9645284a">Building Your Portfolio Website with GitHub Pages
+									</a></h2>
+								</header>
+							<a href="https://medium.com/@almogklein.16/building-your-portfolio-website-with-github-pages-f67b9645284a" class="image fit"><img src="images\protfo.png" alt="" /></a>
+							<p>A polished and professional portfolio website is essential for showcasing your work and attracting potential employers. GitHub Pages offer a simple and free way to create and host your portfolio website.
+								In this step-by-step guide, I'll walk you through the process of building your portfolio website using GitHub Pages and a website template. I'll also share some insightful tips and tricks to make your website truly stand out.</p>
+
+							<ul class="actions special">
+								<li><a href="https://medium.com/@almogklein.16/building-your-portfolio-website-with-github-pages-f67b9645284a" class="button">Medium Article</a></li>
+							</ul>
+							</article>
+
 							<article>
 								<header>
 									<!-- <span class="date">2023</span> -->
@@ -116,7 +130,7 @@
 						</section>
 					</div>
 
-				<!-- Footer -->
+					<!-- Footer -->
 					<!-- Footer -->
 					<footer id="footer">
 						<section class="split contact">
