--- a/posts.html
+++ b/posts.html
@@ -59,6 +59,22 @@
 							<article>
 								<header>
 									<!-- <span class="date">2023</span> -->
+									<h2><a href="https://medium.com/@almogklein.16/data-duel-pandas-2-0-and-polars-0-17-7-battle-for-supremacy-in-speed-and-syntax-87f062995550">Data Duel: Pandas 2.0 and Polars Battle for Supremacy in Speed and Syntax!
+									</a></h2>
+								</header>
+							<a href="https://medium.com/@almogklein.16/data-duel-pandas-2-0-and-polars-0-17-7-battle-for-supremacy-in-speed-and-syntax-87f062995550" class="image fit"><img src="images\pp.jpg" alt="" /></a>
+							<p>When it comes to data analysis, choosing the right tool for the job is essential. Pandas is a popular Python library for data manipulation and analysis, but it can sometimes be slow when working with large datasets. Polars is a newer library that provides a fast and efficient alternative to Pandas, with a similar API.
+
+								We will compare the syntax and performance of Pandas and Polars by creating, manipulating, and analyzing large datasets.</p>
+
+							<ul class="actions special">
+								<li><a href="https://medium.com/@almogklein.16/data-duel-pandas-2-0-and-polars-0-17-7-battle-for-supremacy-in-speed-and-syntax-87f062995550" class="button">Medium Article</a></li>
+							</ul>
+							</article>
+
+							<article>
+								<header>
+									<!-- <span class="date">2023</span> -->
 									<h2><a href="https://medium.com/@almogklein.16/building-your-portfolio-website-with-github-pages-f67b9645284a">Building Your Portfolio Website with GitHub Pages
 									</a></h2>
 								</header>
