--- a/about1.html
+++ b/about1.html
@@ -82,7 +82,8 @@
 			<ul class="info">
 				<li>
 					<a href="tel:+972547456755">Phone |</a>
-					<a href="mailto:almogklein.16@gmail.com"> Email </a>
+					<a href="mailto:almogklein.16@gmail.com"> Email |</a>
+					<a href="Almog%20Klein%20%E2%80%93%20Data%20Scientist%20%26%20Algorithms%20Engineer.pdf" download>CV</a>
 				</li>
 				<li><a href="https://medium.com/@almogklein.16" class="icon brands fa-medium">Medium</a></li>
 				<li><a href="https://www.linkedin.com/in/almog-klein/" class="icon brands fa-linkedin">LinkedIn</a></li>
